docs/sdk/v0.47/documentation/module-system/modules/README.mdx
---
title: Module Summary
description: >-
  Here are some production-grade modules that can be used in Cosmos SDK
  applications, along with their respective documentation:
---

Here are some production-grade modules that can be used in Cosmos SDK applications, along with their respective documentation:

* [Auth](/docs/sdk/v0.47/documentation/module-system/modules/auth/README) - Authentication of accounts and transactions for Cosmos SDK applications.
* [Authz](/docs/sdk/v0.47/documentation/module-system/modules/authz/README) - Authorization for accounts to perform actions on behalf of other accounts.
* [Bank](/docs/sdk/v0.47/documentation/module-system/modules/bank/README) - Token transfer functionalities.
* [Crisis](/docs/sdk/v0.47/documentation/module-system/modules/crisis/README) - Halting the blockchain under certain circumstances (e.g. if an invariant is broken).
* [Distribution](/docs/sdk/v0.47/documentation/module-system/modules/distribution/README) - Fee distribution, and staking token provision distribution.
* [Evidence](/docs/sdk/v0.47/documentation/module-system/modules/evidence/README) - Evidence handling for double signing, misbehaviour, etc.
* [Feegrant](/docs/sdk/v0.47/documentation/module-system/modules/feegrant/README) - Grant fee allowances for executing transactions.
* [Governance](/docs/sdk/v0.47/documentation/module-system/modules/gov/README) - On-chain proposals and voting.
* [Mint](/docs/sdk/v0.47/documentation/module-system/modules/mint/README) - Creation of new units of staking token.
* [Params](/docs/sdk/v0.47/documentation/module-system/modules/params/README) - Globally available parameter store.
* [Slashing](/docs/sdk/v0.47/documentation/module-system/modules/slashing/README) - Validator punishment mechanisms.
* [Staking](/docs/sdk/v0.47/documentation/module-system/modules/staking/README) - Proof-of-Stake layer for public blockchains.
* [Upgrade](/docs/sdk/v0.47/documentation/module-system/modules/upgrade/README) - Software upgrades handling and coordination.
* [NFT](/docs/sdk/v0.47/documentation/module-system/modules/nft/README) - NFT module implemented based on [ADR43](https://docs.cosmos.network/main/architecture/adr-043-nft-module.html).
* [Consensus](/docs/sdk/v0.47/documentation/module-system/modules/consensus/README) - Consensus module for modifying CometBFT's ABCI consensus params.
* [Circuit](/docs/sdk/v0.47/documentation/module-system/modules/circuit/README) - Circuit breaker module for pausing messages.
* [Genutil](/docs/sdk/v0.47/documentation/module-system/modules/genutil/README) - Genesis utilities for the Cosmos SDK.

To learn more about the process of building modules, visit the [building modules reference documentation](https://docs.cosmos.network/main/building-modules/intro).

## IBC

The IBC module for the SDK is maintained by the IBC Go team in its [own repository](https://github.com/cosmos/ibc-go).

Additionally, the [capability module](https://github.com/cosmos/ibc-go/tree/fdd664698d79864f1e00e147f9879e58497b5ef1/modules/capability) is from v0.48+ maintained by the IBC Go team in its [own repository](https://github.com/cosmos/ibc-go/tree/fdd664698d79864f1e00e147f9879e58497b5ef1/modules/capability).

## CosmWasm

The CosmWasm module enables smart contracts, learn more by going to their [documentation site](https://book.cosmwasm.com/), or visit [the repository](https://github.com/CosmWasm/cosmwasm).

## EVM

Read more about writing smart contracts with solidity at the official [`evm` documentation page](https://docs.evmos.org/protocol/modules/evm).
