docs/sdk/v0.50/documentation/module-system/modules/README.mdx
---
title: List of Modules
description: >-
  Here are some production-grade modules that can be used in Cosmos SDK
  applications, along with their respective documentation:
---

Here are some production-grade modules that can be used in Cosmos SDK applications, along with their respective documentation:

## Essential Modules

Essential modules include functionality that *must* be included in your Cosmos SDK blockchain.
These modules provide the core behaviors that are needed for users and operators such as balance tracking,
proof-of-stake capabilities and governance.

* [Auth](/docs/sdk/v0.50/documentation/module-system/modules/auth/README) - Authentication of accounts and transactions for Cosmos SDK applications.
* [Bank](/docs/sdk/v0.50/documentation/module-system/modules/bank/README) - Token transfer functionalities.
* [Circuit](/docs/sdk/v0.50/documentation/module-system/modules/circuit/README) - Circuit breaker module for pausing messages.
* [Consensus](/docs/sdk/v0.50/documentation/module-system/modules/consensus/README) - Consensus module for modifying CometBFT's ABCI consensus params.
* [Distribution](/docs/sdk/v0.50/documentation/module-system/modules/distribution/README) - Fee distribution, and staking token provision distribution.
* [Evidence](/docs/sdk/v0.50/documentation/module-system/modules/evidence/README) - Evidence handling for double signing, misbehaviour, etc.
* [Governance](/docs/sdk/v0.50/documentation/module-system/modules/gov/README) - On-chain proposals and voting.
* [Genutil](/docs/sdk/v0.50/documentation/module-system/modules/genutil/README) - Genesis utilities for the Cosmos SDK.
* [Mint](/docs/sdk/v0.50/documentation/module-system/modules/mint/README) - Creation of new units of staking token.
* [Slashing](/docs/sdk/v0.50/documentation/module-system/modules/slashing/README) - Validator punishment mechanisms.
* [Staking](/docs/sdk/v0.50/documentation/module-system/modules/staking/README) - Proof-of-Stake layer for public blockchains.
* [Upgrade](/docs/sdk/v0.50/documentation/module-system/modules/upgrade/README) - Software upgrades handling and coordination.

## Supplementary Modules

Supplementary modules are modules that are maintained in the Cosmos SDK but are not necessary for
the core functionality of your blockchain.  They can be thought of as ways to extend the
capabilities of your blockchain or further specialize it.

* [Authz](/docs/sdk/v0.50/documentation/module-system/modules/authz/README) - Authorization for accounts to perform actions on behalf of other accounts.
* [Epochs](/docs/sdk/v0.50/documentation/module-system/modules/epochs/README) - Registration so SDK modules can have logic to be executed at the timed tickers.
* [Feegrant](/docs/sdk/v0.50/documentation/module-system/modules/feegrant/README) - Grant fee allowances for executing transactions.
* [Group](/docs/sdk/v0.50/documentation/module-system/modules/group/README) - Allows for the creation and management of on-chain multisig accounts.
* [NFT](/docs/sdk/v0.50/documentation/module-system/modules/nft/README) - NFT module implemented based on [ADR43](https://docs.cosmos.network/main/architecture/adr-043-nft-module.html).
* [ProtocolPool](/docs/sdk/v0.50/documentation/module-system/modules/protocolpool/README) - Extended management of community pool functionality.

## Deprecated Modules

The following modules are deprecated.  They will no longer be maintained and eventually will be removed
in an upcoming release of the Cosmos SDK per our [release process](https://github.com/cosmos/cosmos-sdk/blob/main/RELEASE_PROCESS.md).

* [Crisis](/docs/sdk/v0.50/documentation/module-system/modules/crisis/README) - *Deprecated* halting the blockchain under certain circumstances (e.g. if an invariant is broken).
* [Params](/docs/sdk/v0.50/documentation/module-system/modules/params/README) - *Deprecated* Globally available parameter store.

To learn more about the process of building modules, visit the [building modules reference documentation](https://docs.cosmos.network/main/building-modules/intro).

## IBC

The IBC module for the SDK is maintained by the IBC Go team in its [own repository](https://github.com/cosmos/ibc-go).

Additionally, the [capability module](https://github.com/cosmos/ibc-go/tree/fdd664698d79864f1e00e147f9879e58497b5ef1/modules/capability) is from v0.50+ maintained by the IBC Go team in its [own repository](https://github.com/cosmos/ibc-go/tree/fdd664698d79864f1e00e147f9879e58497b5ef1/modules/capability).

## CosmWasm

The CosmWasm module enables smart contracts, learn more by going to their [documentation site](https://book.cosmwasm.com/), or visit [the repository](https://github.com/CosmWasm/cosmwasm).

## EVM

Read more about writing smart contracts with solidity at the official [`evm` documentation page](https://evm.cosmos.network/).
